# MLBA-project

./: .gitattributes  .gitignore  CRITICAL_COLUMN_FIX.md  ERROR_FIXES_SUMMARY.md  LICENSE  README.md  README.txt  README_NEW.md  TEST_FIXES_SUMMARY.md  TRAINING_ANALYSIS_AND_FIXES.md  check_data.py  debug.py  helperAI.py  improved_helperAI.py  main.py  main_modern.py  modern_example_usage.py  modern_plot.py  problem_unittests.py  pyproject.toml  quick_generation_test.py  requirements.txt  requirements_optimized.txt  run_project.bat  run_project.sh  run_project_optimized.sh  sample.xlsx  test_fixes.py  test_improvements.py  test_modern.py  training_output.txt  validate_pipe_fix.py
Colab/: main.py
archive/: CODE_QUALITY_ENHANCEMENTS.md  CURRENT_STATUS_ANALYSIS.md  ERROR_FIXES_SUMMARY.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTED_FIXES_SUMMARY.md  NON_PROGRAMMER_GUIDE.md  PIPE_TOKEN_FIX.md  SUCCESS_REPORT.md  TEST_FIXES_SUMMARY.md  TRAINING_IMPROVEMENTS.md
colab/: STEPS.md
data/: Game_of_Thrones_Script.csv  Game_of_Thrones_Script.xlsx  sample.xlsx
scripts/: debug.py  quick_generation_test.py  test_columns.py  test_improvements.py  test_modern.py  test_pipe_fix.py  validate_fix.py  validate_pipe_fix.py
src/got_script_generator/: __init__.py  cli.py  improved_helperAI.py  main_modern.py  modern_example_usage.py
