[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "got-script-generator"
version = "0.1.0"
description = "Game of Thrones dialogue generation utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MLBA Project"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
